<resources>
    <string name="app_name">PolyPoker</string>
    <string name="login">Логин</string>
    <string name="log_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Пароль еще раз</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="dont_have_account_question">Нет аккаунта?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_surname">Name Surname</string>
    <string name="total_games_played">всего партий сыграно</string>
    <string name="win_games">выигрышных партий</string>
    <string name="total_earn">заработано за всё время</string>
    <string name="dollar_sign">$</string>
    <string name="replenish_balance">Пополнить баланс</string>
    <string name="find_game">Найти игру</string>
    <string name="call_text">CALL</string>
    <string name="fold_text">FOLD</string>
    <string name="raise_text">RAISE</string>
    <string name="bank_text">БАНК:</string>
    <string name="you_text">Вы</string>
    <string name="create_game">Создать игру</string>
    <string name="ready">Готов</string>
    <string name="notReady">Не готов</string>
</resources>