<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logInLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_poker_BG"
    >

    <TextView
        android:id="@+id/logInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/enter" />

    <EditText
        android:id="@+id/loginPlainText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/purple_light_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/login"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/passwordPlainText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/purple_light_border"
        android:ems="10"
        android:paddingEnd="15dp"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_border"
        android:textSize="15sp"
        android:paddingTop="0dp"
        android:textAllCaps="false"
        android:textColor="@color/dark_purple"
        android:text="@string/log_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dontHaveAccountText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:text="@string/dont_have_account_question"
            android:textColor="@color/light_purple"
            />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/apricot"
            />

    </LinearLayout>

</LinearLayout>