<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RegistrationFragment">

    <LinearLayout
        android:id="@+id/logInLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_poker_BG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/registration" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/purple_border"
                android:backgroundTint="@color/dark_purple"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/name"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/purple_border"
                android:backgroundTint="@color/dark_purple"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/surname"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/purple_border"
            android:backgroundTint="@color/dark_purple"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/login"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/purple_border"
            android:backgroundTint="@color/dark_purple"
            android:ems="10"
            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/purple_border"
            android:backgroundTint="@color/dark_purple"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/password_repeat"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/button_border"
            android:textSize="15sp"
            android:paddingTop="0dp"
            android:textAllCaps="false"
            android:textColor="@color/dark_purple"
            android:text="@string/register" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>